--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,6 @@
 <body>
 
     <nav class="navbar">
-        
         <div class="logo" onmouseover="playMusic()" onmouseout="pauseMusic()">
             <img src="images/livroLogo.png" alt="livro">
         </div>
@@ -17,13 +16,18 @@
 
         <ul class="nav-links">
             <li><a href="index.html">Início</a></li>
-            <li><a href="doeLivros.html">Livros</a></li>
+            <li><a href="livros.html">livros</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
-    </nav>
 
-    
+        <!-- ÁREA DO BIBLIOTECÁRIO DENTRO DA NAVBAR -->
+        <div class="bibliotecario-area">
+            <a href="bibliotecario.html" class="btn-bibliotecario">
+                Área do Bibliotecário
+            </a>
+        </div>
+    </nav>
 
     <section class="catalogo">
         <div class="livro"><img src="images/livro1.png" alt=""></div>
