--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="estilos/login.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="Logo"  onmouseover="playMusic()" onmouseout="pauseMusic()"><img src="images/livroLogo.png" alt="" width="150px"></div>
+        <div class="logo" onmouseover="playMusic()" onmouseout="pauseMusic()">
+            <img src="images/livroLogo.png" alt="Logo" width="150px">
+        </div>
         <ul class="nav-links">
             <li><a href="index.html">Início</a></li>
             <li><a href="curiosidades.html">Livros</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
-            <li><a href="login.html">Loguin</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
-    <audio id="music" src="musica.mp3"></audio>
-    <div class="Contenção">
+
+    <div class="container">
         <form id="loginForm">
             <h2>Login</h2>
-            <label for="username">Usuário:</label>
-            <input type="text" id="username" name="username" required>
-        
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
             <label for="password">Senha:</label>
             <input type="password" id="password" name="password" required>
-        
+
             <button type="submit">Entrar</button>
         </form>
-
-
-        </form>
     </div>
+
     <p id="Res">Mensagem</p>
 
-
-
-
-
+    <audio id="music" src="musica.mp3"></audio>
     <script src="scripts/login.js"></script>
 </body>
 </html>
