--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <script>
 function abrirBibliotecario() {
-    window.location.href = "bibliotecario.html";
+    window.location.href = "painelbibliotecario.html";
 }
 function abrirEstudante() {
     window.location.href = "painelestudante.html";
